# EpicEventCRM

./: .gitignore  README.md  init_db.py  main.py  pyproject.toml  requirements.txt
controllers/: auth_controller.py  client_management.py  contract_management.py  event_management.py  login_controller.py  logout_controller.py  menu_controller.py  user_management.py
models/: client.py  contract.py  event.py  models.py  user.py
tests/: conftest.py
tests/controllers/: test_auth_controller.py  test_login_controller.py  test_menu_controller.py
tests/models/: test_models.py
tests/views/: test_menu.py
utils/: choose_items.py  db.py  logger.py  pagination.py  permissions.py  session.py  validation.py
views/: connection.py  forms.py  login.py  menu.py  menus.py  messages.py  reports.py
