[tool.poetry]
name = "epiceventcrm"
version = "0.1.0"
description = ""
authors = ["LeJinge <jeremycarmona28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sentry-sdk = "^1.42.0"
typer = "^0.9.0"
rich = "^13.7.1"
sqlalchemy = "^2.0.28"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
