[tool.poetry]
name = "epiceventcrm"
version = "0.1.0"
description = ""
authors = ["LeJinge <jeremycarmona28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sentry-sdk = "^1.42.0"
typer = "^0.9.0"
rich = "^13.7.1"
sqlalchemy = "^2.0.28"
passlib = "^1.7.4"
psycopg2 = "^2.9.9"
bcrypt = "4.0.1"
prompt-toolkit = "^3.0.43"
pytest = "^8.1.1"
pytest-sqlalchemy = "^0.2.1"
pytest-mock = "^3.14.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
